v1.4.7:
 - made the goodness-of-fit in orbit_fitter an actual chi-squared

v1.4.6: (BUG FIX)
 - the reverse orbit in orbit_fitter.get_OrbitData_from_orbit() was using the forwards
   orbit to calculate vgsr. Fixed
 - timestep.only_dark_matter() had a typo that made it identical to only_baryons(). Fixed
 - did some refactoring of orbit_fitter to make it easier to read and more consistent with
   things like changing the timestep and potential

v1.4.5: (MINOR PATCH)
 - fixed bug where orbit fitter plots would use the mwahpy default potential even
   if another was provided
 - output_handler.read_output() now works for files with the <bodies> </bodies> tags format
 - changed name of sky_to_pole() to pole_rotation(), because it was confusing. 
   sky_to_pole() is now an alias for pole_rotation() and causes a DeprecationWarning
 - added pole_rotation_inv() function
 - timestep.scatter() now has a 'cbar' keyword to turn on a colorbar & shade particles appropriately
 - improved how .coords was checking types
 - added eq_to_OC() transformation from ra/dec to Orphan-Chenab lambda/beta, 
   and OC_to_eq() inverse transformation

v1.4.4: (MINOR PATCH)
 - orbit_fitter gradient descent now uses Nelder-Mead optimizer by default, BFGS
   was terminating the optimization early
 - fixed bug in calc_self_energies where KE was 2x as large as it should be
 - added ability to change galaxy potential in orbit_fitter.py

v1.4.3: (BUG FIX)
 - fixed some typos that would prevent the package from initializing correctly
 - fixed plot.hist()
 - fixed print_particle()
 - calc_rvpm() was adding an additional unnecessary (unsupported) key to the
   timestep object
 - made timestep.recenter() and timestep.update() more verbose
 - warnings are now printed, not raised as errors
 - typos in plot.fancy_plot()
 - fixed incorrect sizing of plot.fancy_plot()

v1.4.2: (MINOR PATCH)
 - Now using python's built-in Warning class instead of manually checking flags
   and printing warning statements