@@ -782,3 +782,20 @@ def find_progenitor(t, ran=100.):
     pos = [x_val,y_val,z_val]
 
     return pos
+
+#computes the amount of bound mass (split up by DM and baryons) around a dwarf
+#assumes that all of the particles in the timestep belong to the dwarf
+#adapted from code written by Hiroka Warren
+
+#output = total bound mass, baryon bound mass, DM bound mass (in structure masses)
+
+def get_bound_mass(t):
+    #t: the timestep
+
+    self_energies = get_self_energies(t)
+
+    bound = (self_energies < 0)
+    bary = (t.typ == 0)
+    dm = (t.typ == 1)
+
+    return np.sum(t.mass[bound]), np.sum(t.mass[bound*bary]), np.sum(t.mass[bound*dm])
